[package]
name = "includium-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
includium = { path = "../includium" }
clap = { version = "4.5", features = ["derive", "help", "usage", "env", "color", "suggestions"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
atty = "0.2"
colored = "2.1"

[features]
default = ["json"]
json = ["serde_json"]
