[package]
name = "includium"
version = "0.1.0"
edition = "2024"
description = "A complete C preprocessor implementation in Rust."
license = "MPL-2.0"
repository = "https://github.com/walker84837/includium"
readme = "../README.md"
keywords = ["c", "preprocessor"]
categories = ["development-tools"]

[lib]
name = "includium"
crate-type = ["lib", "cdylib"]

[dependencies]
